--- a/Sentiment_Analysis(TextBlob).ipynb
+++ b/Sentiment_Analysis(TextBlob).ipynb
@@ -29,7 +29,7 @@
     "import nltk\n",
     "import csv\n",
     "from textblob import TextBlob\n",
-    "with open('Deloitte Team 2 Twitter data 2 July MvN cleaned.csv', 'r') as fp:\n",
+    "with open('data_cleaned.csv', 'r') as fp:\n",
     "     content = fp.read()\n",
     "blob = TextBlob(content)\n",
     "import pandas as pd\n",
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('Deloitte Team 2 Twitter data 2 July MvN cleaned.csv')\n",
+    "df = pd.read_csv('data_cleaned.csv')\n",
     "df = df.drop(columns=['DOCID','name','date_created','handle'],axis=1)\n",
     "df = pd.DataFrame(df)\n",
     "df.head(5)"
